[gd_scene load_steps=3 format=3 uid="uid://6ufvykm1vpb3"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_vrhkj"]
[ext_resource type="FontFile" uid="uid://c0vt7el0lpsqk" path="res://assets/fonts/PixelOperator8.ttf" id="2_oenu3"]

[node name="OptionsMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_vrhkj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(484, 216)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.0
offset_top = -108.0
offset_right = 242.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_oenu3")
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="Space" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_oenu3")
theme_override_font_sizes/font_size = 24
text = "Music Volume"
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0
value = -10.0

[node name="Space2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SoundEffectLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_oenu3")
theme_override_font_sizes/font_size = 24
text = "Sound Effects Volume"
vertical_alignment = 1

[node name="SoundEffectSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0
value = -10.0

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_music_audio_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SoundEffectSlider" to="." method="_on_sound_effect_h_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SoundEffectSlider" to="." method="_on_sound_effect_slider_value_changed"]
